k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: static-deploy
    namespace: app2
spec:
   replicas: 1
   selector:
     matchLabels:
       app: jquery
   template:
     metadata:
        name: jquery-pod
        labels:
          app: jquery
     spec:
       containers:
       - name: jquery-cont
         image: 427404661948.dkr.ecr.us-east-2.amazonaws.com/jquery-static:mynumber
         ports:
         - containerPort: 80
