k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: jquery-service
  namespace: app2
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-ip-address-type: alb
spec:
  selector:
    app: jquery
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: LoadBalancer
