k8s/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-jquery
  namespace: app2
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: dev-jquery.awsweb.online
    http:
     paths:
     - path:
       backend:
          serviceName: jquery-service
          servicePort: 80
